--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,14 @@ jobs:
       with:
         node-version: 18
 
+    - name: Install pnpm
+      run: npm install -g pnpm
+
     - name: Install dependencies
-      run: npm ci
+      run: pnpm ci
 
     - name: Build NestJS app
-      run: npm run build
+      run: pnpm run build
 
     - name: Zip deployment package
       run: zip -r deploy.zip . -x ".git/*" "node_modules/*" "test/*"
